@@ -43,6 +43,8 @@ API CHANGES
  -- Remove burst_buffer/lua call slurm.job_info_to_string().
  -- job_submit/lua - Add "assoc_qos" attribute to job_desc to display all
     potential QOS's for a job's association.
+ -- job_submit/lua - Add slurm.get_qos_priority() function to retrieve the
+    given QOS's priority.
 
 SLURMRESTD CHANGES
 ==================
